fix a silly bug..

--- a/pages/about_secret.html
+++ b/pages/about_secret.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-		<title>手动删除Windows上的服务程序 | Frantic World</title>
+		<title>About | Frantic World</title>
 	<meta charset="utf-8" />
     <meta name="author" content="Frantic1048">
 	<link rel="stylesheet" href="http://frantic1048.com/theme/css/franticworld.css" type="text/css" />
 	<link href="http://frantic1048.com/theme/css/pygments.css" rel="stylesheet">
 	</head>
 <body background="http://frantic1048.com/theme/img/pattern.png">
+
 		<div class="nav-banner">
 		<a href="http://frantic1048.com">Frantic World</a>
 		</div>
 		
 		<div class="content">
-		
-<div class="metabox">
-	<p class="metaday">177</p>
-	<p class="metayear">2013</p>
-	<p class="metacategory">Misc</p>
-</div>
-<div class="arcticlecontentbox">
-	<div class="articlecontent">
-		<a class="articletitle" href="/shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html " >手动删除Windows上的服务程序</a>
-		<p>好多软件在卸载的时候不会卸载自己安装的服务程序，而且不知道什么时候还会被继续装上，前些天莫名其妙被装上风行就是这情况。</p>
-<p>我先用<code>iobit unistaller</code>把它卸载了，最后弄完发现系统进程里面竟然还有风行的服务程序，我打开进程目录一看，甚至连安装包都还在那个目录下面，而且这还是一个相当庞大的目录！</p>
-<p>二话不说，先把服务程序和安装程序都给加到HIPS的Block List中去，总之再也不想见到它，接下来就是删除这个风行制造的目录。</p>
-<p>之后还要在注册表中删除那个服务程序的键，否则的话你一直都会在系统的服务列表里面看到它。</p>
-<p>在注册表<code>LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services</code>中找到你要删除的服务程序，直接删掉即可。</p>
-	</div>
-	
-		<div class="comments">
-	<div id="disqus_thread"></div>
-	<script type="text/javascript">
-	   var disqus_identifier = "shou-dong-shan-chu-windowsshang-de-fu-wu-cheng-xu.html";
-	   (function() {
-			var dsq = document.createElement('script');
-			dsq.type = 'text/javascript'; dsq.async = true;
-			dsq.src = 'http://frantic1048.disqus.com/embed.js';
-			(document.getElementsByTagName('head')[0] ||
-			 document.getElementsByTagName('body')[0]).appendChild(dsq);
-	  })();
-	</script>
-	</div>
-		       
-</div>
+		<div id="content" class="page-body">
+        <h1 class="page-title">About</h1>
+		<hr></hr>
+        <h2>Blog</h2>
+<p>如你所见，如你所想。</p>
+<h2>Me</h2>
+<p>一个想要升级技术宅的小白，软件控，ACG中度中毒者，禁止事项。</p>
+<h2>License</h2>
+<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh"><img alt="知识共享许可协议" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />本站所有作品采用<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh">CC BY-SA 3.0协议</a>进行许可。
+转载请注明来源。</p>
+				<div class="comments">
+		<div id="disqus_thread"></div>
+		<script type="text/javascript">
+		   var disqus_identifier = "pages/about.html";
+		   (function() {
+				var dsq = document.createElement('script');
+				dsq.type = 'text/javascript'; dsq.async = true;
+				dsq.src = 'http://frantic1048.disqus.com/embed.js';
+				(document.getElementsByTagName('head')[0] ||
+				 document.getElementsByTagName('body')[0]).appendChild(dsq);
+		  })();
+		</script>
+		</div>
+		</div>
+
+
 
 		</div>
 		
@@ -82,5 +78,15 @@
 				Theme by <a href="http://frantic1048.com/">Frantic1048</a>.
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
+<script>
+var fname = "demo-pure-css-tooltip.css"
+var rq = new XMLHttpRequest();
+rq.open('GET',fname,true);
+rq.send(null);
+console.log(rq.status);
+console.log(rq.responseText);
+
+
+</script>
 </body>
 </html>
