--- a/pages/about_secret.html
+++ b/pages/about_secret.html
@@ -79,8 +79,12 @@
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 <script>
+function reqListener () {
+  console.log(this.responseText);
+}
 var fname = "demo-pure-css-tooltip.css"
 var rq = new XMLHttpRequest();
+rq.onload = reqListener;
 rq.open('GET',fname,true);
 rq.send(null);
 console.log(rq.status);
