--- a/pages/about_secret.html
+++ b/pages/about_secret.html
@@ -84,7 +84,7 @@ function reqListener () {
 }
 var fname = "demo-pure-css-tooltip.css"
 var rq = new XMLHttpRequest();
-rq.onload = reqListener;
+rq.onreadystatechange = reqListener;
 rq.open('GET',fname,true);
 rq.send(null);
 console.log(rq.status);
