--- a/index2.html
+++ b/index2.html
@@ -246,7 +246,7 @@
 
 <div class="sidebarsocial">
 <h4>Social</h4>
-    <li><a href="http://tudou.com/home/FranticBlack">Tudou</a></li>
+    <li><a href="http://frantle.deviantart.com/">deviantART</a></li>
     <li><a href="https://github.com/frantic1048">Github</a></li>
 </div>		</div>
 		
