--- a/linuxxia-tong-guo-cuefen-gui-cheng-flac.html
+++ b/linuxxia-tong-guo-cuefen-gui-cheng-flac.html
@@ -123,7 +123,7 @@ find . -name <span class="s2">&quot;*.flac&quot;</span> -print0 |xargs -0 metafl
 
 <div class="sidebarsocial">
 <h4>Social</h4>
-    <li><a href="http://tudou.com/home/FranticBlack">Tudou</a></li>
+    <li><a href="http://frantle.deviantart.com/">deviantART</a></li>
     <li><a href="https://github.com/frantic1048">Github</a></li>
 </div>		</div>
 		
