--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
         <h1 class="page-title">About</h1>
 		<hr></hr>
         <h2>Blog</h2>
-<p>如你所见，如你所想。</p>
+<p>如你所见，如我所想。</p>
 <h2>Me</h2>
 <p>一个想要升级技术宅的小白，软件控，ACG中度中毒者，禁止事项。</p>
 <h2>License</h2>
@@ -66,7 +66,7 @@
 
 <div class="sidebarsocial">
 <h4>Social</h4>
-    <li><a href="http://tudou.com/home/FranticBlack">Tudou</a></li>
+    <li><a href="http://frantle.deviantart.com/">deviantART</a></li>
     <li><a href="https://github.com/frantic1048">Github</a></li>
 </div>		</div>
 		
