--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 	<div class="articlecontent">
 		<a class="articletitle" href="/about.html " >About</a>
 		<h2>Blog</h2>
-<p>如你所见，如你所想。</p>
+<p>如你所见，如我所想。</p>
 <h2>Me</h2>
 <p>一个想要升级技术宅的小白，软件控，ACG中度中毒者，禁止事项。</p>
 <h2>License</h2>
