--- a/bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html
+++ b/bo-ke-dan-sheng-ji-ji-yu-githubpelicanchuang-jian-bo-ke-de-zheng-ge-guo-cheng.html
@@ -304,7 +304,7 @@ PLUGINS = ["sitemap"]</p>
 
 <div class="sidebarsocial">
 <h4>Social</h4>
-    <li><a href="http://tudou.com/home/FranticBlack">Tudou</a></li>
+    <li><a href="http://frantle.deviantart.com/">deviantART</a></li>
     <li><a href="https://github.com/frantic1048">Github</a></li>
 </div>		</div>
 		
