--- a/yi-pelican-themesguan-fang-wen-dang.html
+++ b/yi-pelican-themesguan-fang-wen-dang.html
@@ -185,7 +185,7 @@ simple  </p>
 
 <div class="sidebarsocial">
 <h4>Social</h4>
-    <li><a href="http://tudou.com/home/FranticBlack">Tudou</a></li>
+    <li><a href="http://frantle.deviantart.com/">deviantART</a></li>
     <li><a href="https://github.com/frantic1048">Github</a></li>
 </div>		</div>
 		
