new article ,intro to web

--- a/archives.html
+++ b/archives.html
@@ -17,6 +17,8 @@
 <h1>Archives for Frantic World</h1>
 
 <dl>
+	<dt>11 Sep,2014</dt>
+	<dd><a href='wang-ye-zhi-zuo-xiao-gong-lue.html'>网页制作小攻略</a></dd>
 	<dt>20 May,2014</dt>
 	<dd><a href='krita-28-kuai-jie-jian.html'>Krita 2.8 快捷键</a></dd>
 	<dt>12 May,2014</dt>
