u cannot emmit preserveAspectRatio...

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     xmlns="http://www.w3.org/2000/svg"
     version="1.1"
     viewBox="0 0 2500 3489"
+    preserveAspectRatio="xMaxYMax meet"
     id="kotori_svg_background">
     <path
       id="kotori_svg_curve"
