--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <span>f</span><span>r</span><span>a</span><span>n</span><span>t</span><span>i</span><span>c</span><span>1</span><span>0</span><span>4</span><span>8</span>
   </header>
   <nav id="nav-links">
-    <!--<a target="_blank" href="https://github.com/frantic1048">Repos</a>
+    <a target="_blank" href="https://github.com/frantic1048">Repos</a>
     <a target="_blank" href="http://log.frantic1048.com/">Logs</a>
-    <a target="_blank" href="http://frantle.deviantart.com/">Deviantions</a>-->
-    <a href="#Works">Works</a>
+    <a target="_blank" href="http://frantle.deviantart.com/">Deviantions</a>
+<!--    <a href="#Works">Works</a>
     <a href="#Amigos">Amigos</a>
-    <a href="#About"></a>
+    <a href="#About"></a>-->
   </nav>
   </div>
   <svg
