update logdown link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ window.addEventListener('load', function () {
   <h2>网页制作学习中</h2>
   <nav id="nav-links">
     <a target="_blank" href="https://github.com/frantic1048">代码</a>
-    <a target="_blank" href="http://log.frantic1048.com/">日志</a>
+    <a target="_blank" href="http://frantic1048.logdown.com/">日志</a>
     <a target="_blank" href="http://frantle.deviantart.com/">文艺</a>
   </nav>
 </header>
