--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-cmn-Hans">
+<html lang="cmn-hans">
 <head>
 <meta charset="UTF-8">
 <title>Frantic1048 | Home</title>
