update blog link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ window.addEventListener('load', function () {
   <h2><ruby>网页制作学习中<rt>Learning web production</ruby></h2>
   <nav id="nav-links">
     <a target="_blank" href="https://github.com/frantic1048"><ruby>代码<rt>Code Repos</ruby></a>
-    <a target="_blank" href="http://frantic1048.logdown.com/"><ruby>日志<rt>Daily Logs</ruby></a>
+    <a target="_blank" href="https://pyonpyon.today/"><ruby>日志<rt>Daily Logs</ruby></a>
     <a target="_blank" href="http://frantle.deviantart.com/"><ruby>文艺<rt>Deviantions</ruby></a>
   </nav>
 </header>
